--- a/src/styles/MyStyles.css
+++ b/src/styles/MyStyles.css
@@ -1,7 +1,15 @@
 img.tryshe {
-    width:50px;
-    height:50px;
-    display:block;
+    width: 50px;
+    height: 50px;
+    display: block;
 }
-td, tr, img  { padding: 0px; margin: 0px; border: none; }
-table { border-collapse: collapse; }
+
+td, tr, img {
+    padding: 0px;
+    margin: 0px;
+    border: none;
+}
+
+table {
+    border-collapse: collapse;
+}
